--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-    "name":"wspgulptest",
-    "devDependencies":{
-       "gulp": "^3.9.0"
-    }
+  "name": "wspgulptest",
+  "devDependencies": {
+    "browser-sync": "^2.17.0",
+    "gulp": "^3.9.0",
+    "gulp-ejs": "^2.2.1",
+    "gulp-less": "^3.1.0",
+    "gulp-uglify": "^2.0.0"
+  }
 }
